# PUPRemote

./: .gitignore  MANIFEST.in  PACKAGING.md  QUICK_REFERENCE.md  README.md  lpf2.py  mkdocs.yml  package.json  pd_emu.py  pd_emu_example.py  pyproject.toml  setup.py  test.py
LPF2/: README.md  lpf2.py  lpf2_new.py  lpf2_test.py  lpf2_test_new.py  pupremote.py  pupremote_ste7an.py  pupremote_test.py  pybricks_PUPRemote_technichub.py  pybricks_PUPRemotehub.py
PUPRemote/: PUPRemote.py  README.md  demo_pybricks_inventorhub.py  demo_pybricks_technichub.py  lpf2.py  pd_emu.py  pd_emu_example.py  pupremote.py
docs/: index.md  index.rst  mkdocs.yml
esp32_working/: README.md  demo_esp32.py  demo_pybricks_inventorhub.py  lpf2.py  pupremote.py
examples/bluepad/: bluepad_example.py  bluepad_example_spikehub.py
examples/bluepad32/: bluepad32.py  bluepad_test_tecnhic.py  test_bluepad32.py
examples/bluepad_external/: README.md  bp_esp32.py  pybricks_bp_ext.py
examples/emulate_dist_sensor/: VL53L0X.py  distance_sensor_spike3.sal  lpf2.py  lpf2_new.py  main.py  spike3_lpf2_emu_dist.py  test_lpf2.py  test_vl53.py
examples/esp23_pymakr_test/: main.py  pymakr.conf
examples/esp32_async/: pup_demo_esp32_async.py  pup_demo_pybricks_async.py
examples/esp32_dummy_data/: demo_esp32.py  demo_pybricks_inventorhub.py  pup_demo_esp32.py  pup_demo_pybricks.py  pup_led_esp32.py  pup_led_pybricks.py  (+2 more)
src/: blocks_bp.py  bluepad.py  lpf2.py  pupremote.py  pupremote_hub.py  pybricks_blocks_boilerplate.py  queue.py
tests/: README.md  strip.py  test_integration.py  test_pupremote.py
(+62 files in other folders)
